--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,9 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            python2.7 -m venv venv
-            . venv/bin/activate
+            #python2.7 -m venv venv
+            virtualenv tameofthrones
+            . tameofthrones/bin/activate
             pip install -r requirements.txt
       # Step 3: run linter and tests
       - run:
