--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run:
           name: run tests
           command: |
-            . venv/bin/activate
-            flake8 --exclude=venv* --statistics
+            . tameofthrones/bin/activate
+            flake8 --exclude=tameofthrones* --statistics
             pytest -v --cov=calculator
 
