--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,14 +15,14 @@ jobs:
           name: install dependencies
           command: |
             #python2.7 -m venv venv
-            virtualenv tameofthrones
-            . tameofthrones/bin/activate
+            virtualenv venv
+            . venv/bin/activate
             pip install -r requirements.txt
       # Step 3: run linter and tests
       - run:
           name: run tests
           command: |
-            . tameofthrones/bin/activate
-            flake8 --exclude=tameofthrones* --statistics
+            . venv/bin/activate
+            flake8 --exclude=venv* --statistics
             pytest -v --cov=tameofthrones
 
