--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,5 +24,6 @@ jobs:
           command: |
             . venv/bin/activate
             flake8 --exclude=venv* --statistics
+            python -m unittest -v tameofthrones.test_tameofthrones
             pytest -v --cov=tameofthrones
 
